<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>

    <!-- header text for the list  of toppings [CHAR LIMIT =20]-->
    <string name="toppings">Toppings</string>


    <string name="thank_you">Thank you!</string>
    <string name="name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="add_whipped_cream">Add Whipped Cream?: <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <string name="add_chocolate">Add Chocolate?: <xliff:g id="addChocolate" example="true">%b</xliff:g></string>

    <string name="quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>
    <string name="total">Total: <xliff:g id="price" example="$10">%s</xliff:g></string>

    <string name="toast_decrement">At least one, Please!. </string>
    <string name="toast_increment">Too many cups of coffee. </string>

    <string name="whipped_cream">Whipped Cream </string>
    <string name="chocolate">Chocolate </string>
    <string name="quantity_text">Quantity </string>
    <string name="order">Order </string>
</resources>
